@@ -86,8 +86,9 @@ twic.twitter = ( function() {
 	 * Get user timeline
 	 * @param {number} id User identifier
 	 * @param {function(twic.DBObjectList,twic.DBObjectList)} callback Callback function
+	 * @param {string} afterId Get only after tweet id
 	 */
-	twitter.getHomeTimeline = function(id, callback) {
+	twitter.getHomeTimeline = function(id, callback, afterId) {
 		var
 			tmpTweet = new twic.db.obj.Tweet(),
 			tmpUser  = new twic.db.obj.User();
@@ -104,8 +105,9 @@ twic.twitter = ( function() {
 				'inner join users u on (t.user_id = u.id) ' +
 				'left join users r on (t.retweeted_user_id = r.id) ' +
 			'where tl.user_id = ? ' +
+			(afterId ? ' and t.id > ? ' : '') +
 			'order by t.dt desc, t.id desc limit 20 ',
-			[id],
+			afterId ? [id, afterId] : [id],
 			/**
 			 * @this {SQLResultSetRowList}
 			 */
@@ -116,7 +118,7 @@ twic.twitter = ( function() {
 					userList  = new twic.DBObjectList(twic.db.obj.User),
 					i;
 
-				for (i = 0; i <rows.length; ++i) {
+				for (i = 0; i < rows.length; ++i) {
 					var row = rows.item(i);
 
 					tweetList.pushUnique(row, 't');
